Fix the overflowing text

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,7 +1,7 @@
-* {
+/* * {
   outline: rgb(26, 138, 138) solid 1px;
 
-}
+} */
 
 main {
   display:flex;
