--- a/src/BookCard/BookCard.css
+++ b/src/BookCard/BookCard.css
@@ -10,6 +10,8 @@
   background: #fff;
   perspective: 70rem;
   position: relative;
+
+
   box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.5), 0 0 0 3px #fff, 0 0 2px 4px rgba(0, 0, 0, 0.5), 0 0 0 7px #9388BB, 0 0 1px 8px rgba(0, 0, 0, 0.5), 0 0 30px rgba(0, 0, 0, 0.51);
 }
 
@@ -23,6 +25,8 @@
   opacity: 1;
   transition: all 2.5s ease-in-out;
   animation: turnpage 10s infinite linear;
+  /* overflow-y: hidden; */
+  
 }
 
 .pagenext {
@@ -31,6 +35,8 @@
   position: absolute;
   height: 100%;
   margin: 0% 50%;
+  /* overflow-y: hidden; */
+
 }
 
 .pageprev {
@@ -43,6 +49,8 @@
   transform: rotateY(180deg);
   opacity: 0;
   animation: opac 10s infinite linear;
+  /* overflow-y: hidden; */
+
 }
 
 .line {
@@ -53,20 +61,27 @@
   height: 0;
   top: 50%;
   left: 25%;
+  
 }
 
 p {
   padding: 10px 10px 0 10px;
-  font-size: 25%;
+  /* font-size: 125%; */
+  /* overflow-y: hidden; */
+
 }
 
 .page p {
   margin-top: -0.7px;
   padding: 10px 0px 0 10px;
+  /* overflow-y: hidden; */
+
 }
 
 .pagenext p {
   margin-top: -2px;
+  /* overflow-y: hidden; */
+
 }
 
 @keyframes turnpage {
@@ -74,15 +89,22 @@ p {
     transform: rotateY(0deg);
     opacity: 1;
     box-shadow: 3px -2px 5px rgba(0, 0, 0, 0.5);
+    /* overflow-y: hidden; */
+
+
   }
 
   50% {
     transform: rotateY(-90deg);
     opacity: 1;
+  /* overflow-y: hidden; */
+
   }
 
   100% {
     transform: rotateY(-180deg);
+  /* overflow-y: hidden; */
+
   }
 }
 
@@ -98,4 +120,11 @@ p {
   100% {
     opacity: 1;
   }
+}
+
+p {
+  overflow-y: hidden;
+  height: 95.0%;
+  font-size: 1rem;
+
 }
